config/overlays/dev/server-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  template:
    spec:
      containers:
        - name: server
